# mitten_preorder

./: LICENSE  Makefile  README.md  mitten.opam
src/lib/: abstract_mode_theory.mli  check.ml  check.mli  concrete_mode_theory.ml  concrete_syntax.mli  domain.ml  domain.mli  driver.ml  dune  grammar.mly  guarded_mode_theory.ml  guarded_mode_theory1.ml  lex.mll  minimal_mode_theory.ml  minimal_mode_theory.mli  mode_theory.ml  nbe.ml  nbe.mli  syntax.ml  syntax.mli
test/: eq.tt  eta.tt  example.tt  fib.tt  guarded_rec.tt
